# WLED-RGBWW

./: .gitignore  AGENTS.md  README  camera_gphoto2.py  esphome.py  generate_channel_curve.py  location_picker_ui.py  measure_channel_response.py  merge_channel_response.py  pyproject.toml  test.py
.agents/skills/camera-based-rgbww-optimizer/: SKILL.md
.agents/skills/wled-rgbww/: SKILL.md
docs/: README.md
firmware/esphome/: README.md  bedroom-rgbww-strip-common.yaml  bedroom-rgbww-strip-no-webui.yaml  bedroom-rgbww-strip-webui.yaml  bedroom-rgbww-strip.yaml  secrets.example.yaml  wled-bedroom-rgbww-common.yaml  wled-bedroom-rgbww-no-webui.yaml  wled-bedroom-rgbww-webui.yaml  wled-bedroom-rgbww.yaml
src/camera_based_rgbww_optimizer/: paths.py
src/camera_based_rgbww_optimizer/control/: camera_gphoto2.py  esphome.py  ray120c.py
src/camera_based_rgbww_optimizer/interaction/: location_picker_ui.py
src/camera_based_rgbww_optimizer/optimization/: measure_channel_response.py
src/camera_based_rgbww_optimizer/utils/: generate_channel_curve.py  location_regions.py  merge_channel_response.py
tests/: test_camera_gphoto2.py  test_generate_channel_curve.py  test_location_picker_ui.py  test_main.py  test_measure_channel_response.py  test_merge_channel_response.py  test_paths.py  test_ray120c.py
